# healthy-ai-engine

./: .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml
.agent/rules/: python-project.md  python-style.md
.agent/skills/python-code/: SKILL.md
.agent/workflows/: pre-commit.md
.github/: pull_request_template.md
.github/workflows/: update-docs.lock.yml  update-docs.md
src/healthy_ai_engine/: __init__.py  exceptions.py
src/healthy_ai_engine/agents/: __init__.py
src/healthy_ai_engine/models/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_init.py
