[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthy-ai-engine"
version = "0.1.0"
description = "An open-source AI engine for fitness tracking and health intelligence — built to explore and test Continuous AI workflows."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
authors = [
    { name = "PLJanicki" },
]
keywords = [
    "continuous-ai",
    "ai-agents",
    "health",
    "fitness",
    "machine-learning",
    "agentic-ai",
    "mlops",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/PLJanicki/healthy-ai-engine"
Repository = "https://github.com/PLJanicki/healthy-ai-engine"
Issues = "https://github.com/PLJanicki/healthy-ai-engine/issues"

# --------------------------------------------------------------------------- #
# Tool Configuration
# --------------------------------------------------------------------------- #

[tool.hatch.build.targets.wheel]
packages = ["src/healthy_ai_engine"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["healthy_ai_engine"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
